Update buildOSRefDocs.yml with more dependencies and upload artifact

--- a/.github/workflows/buildOSRefDocs.yml
+++ b/.github/workflows/buildOSRefDocs.yml
@@ -1,36 +1,80 @@
 name: Build and Deploy Docs
 
 on:
-  push:
-    branches:
-      - master  # or 'main' or any branch you want to trigger on
   workflow_dispatch:
+
+env:
+  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
+  # This yml is copied from https://github.com/hn-88/OCVWarp/blob/master/.github/workflows/cmake-nix.yml
+  # and modified.
+  BUILD_TYPE: Release
+  # As recommended here: https://github.com/marketplace/actions/sccache-action
+  SCCACHE_GHA_ENABLED: "true"
+  SCCACHE_CACHE_SIZE: 5G
+  CMAKE_C_COMPILER_LAUNCHER: sccache
+  CMAKE_CXX_COMPILER_LAUNCHER: sccache
+  OPENSPACE_VERSION: "0.21.0"
+  APPIMAGE_VERSION: "1"
+  COMMIT_HASH: "0bec798cb39c2765373283a21312478d3d2e3c7f"
+  # from https://github.com/mozilla/sccache/?tab=readme-ov-file#separating-caches-between-invocations
+  SCCACHE_C_CUSTOM_CACHE_BUSTER: "ubuntu-24.04"
 
 jobs:
   build-docs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout source
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: 'OpenSpace/OpenSpace'
         ref: 'master'
         submodules: 'recursive'
 
+    - name: Free Disk Space (Ubuntu)
+      uses: jlumbroso/free-disk-space@main
+      with:
+        # this might remove tools that are actually needed,
+        # if set to "true" but frees about 6 GB
+        tool-cache: false
+        
+        # all of these default to true, but feel free to set to
+        # "false" if necessary for your workflow
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: false
+        docker-images: true
+        swap-storage: false
+
     - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y doxygen graphviz cmake ninja-build
+        sudo apt-get -y install glew-utils libpng-dev freeglut3-dev git libxrandr-dev libxinerama-dev xorg-dev libxcursor-dev libcurl4-openssl-dev libxi-dev libasound2-dev libgdal-dev libboost-all-dev qt6-base-dev libmpv-dev libvulkan-dev
+        sudo apt-get -y install software-properties-common
+        sudo apt-get -y install libasound2t64 
 
     - name: Create build directory
       run: mkdir build
+
+    - name: Enable sccache
+      uses: mozilla-actions/sccache-action@v0.0.9
 
     - name: Run CMake with docs enabled
       run: |
         cd build
         cmake .. -DOPENSPACE_BUILD_DOCS=ON -G Ninja
         ninja doc
+
+    - name: Upload doc Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        # Artifact name
+        name: OpenSpace-Docs
+        # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        path: ./build/docs/html
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
