try running openspace to see if it builds the documentation

--- a/.github/workflows/buildOSRefDocs.yml
+++ b/.github/workflows/buildOSRefDocs.yml
@@ -71,6 +71,9 @@ jobs:
         cd build
         make -j $(nproc)
 
+    - name: Run OpenSpace to generate documentation
+      run: bin/OpenSpace
+
     - name: Upload doc Artifact
       uses: actions/upload-artifact@v4
       with:
